# cod-cookie-jar

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: export-cookies.md
examples/: export_via_cdp.py  export_youtube_playwright.py
fixtures/golden/: chips_partitioned_flattened.json  domain_cookie_leading_dot.json  empty.json  fractional_expiry_truncated.json  full_mixed.json  host_only_cookie.json  host_prefixed_name.json  httponly_domain_cookie.json  httponly_prefix.json  leading_dot_fallback.json  negative_expiry_is_session.json  nested_path_preserved.json  secure_flag.json  session_cookie_expiry_zero.json  value_not_url_decoded.json
node/: package.json
node/src/: cli.js  core.js  index.js
node/src/adapters/: cdp.js
node/test/: golden.test.js
skills/cod-cookie-jar/: SKILL.md
skills/nlp-cookies-txt/: SKILL.md
src/cod_cookie_jar/: __init__.py  cli.py  core.py
src/cod_cookie_jar/adapters/: __init__.py  base.py  cdp.py  playwright.py  selenium.py
src/nlp_cookies_txt/: __init__.py  cli.py  core.py  sinks.py  wait.py
src/nlp_cookies_txt/adapters/: cdp.py
tests/: test_cli_domain_filter.py  test_core.py  test_golden_fixtures.py
tools/: make_fixtures.py
