[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-cookies-txt"
version = "0.1.0"
description = "Export cookies.txt (Netscape format) from a browser you control, across automation stacks."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cookies", "cookies.txt", "netscape", "cdp", "playwright", "selenium", "yt-dlp"]
dependencies = []

[project.optional-dependencies]
cdp = ["websocket-client>=1.6"]
playwright = ["playwright>=1.40"]
selenium = ["selenium>=4.15"]
dev = ["pytest>=7.4", "websocket-client>=1.6"]
all = ["websocket-client>=1.6", "playwright>=1.40", "selenium>=4.15"]

[project.scripts]
nlp-cookies-txt = "nlp_cookies_txt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
